# ChangeLog for sys-apps/calculate-client
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  05 Aug 2009; Aleksandr Yakimov (yaleks) <yaleks@gentoo.ru>
  calculate-server-2.1.3.ebuild, +metadata.xml:
  Ebuild fix
