@@ -1,9 +1,11 @@
 AUX calculate-server-2.1.4-r1.patch 2203 RMD160 d0b228586b0122622a08a7825c8e823d9c8f021e SHA1 abb690375ee9447f96c47455295a24dbf83f3c18 SHA256 5b61d5add4c30ac4826e4933316a3ed4c5eafed0a04e8864e06e4cf83f2be66b
 DIST calculate-server-2.1.3.tar.bz2 106639 RMD160 8c64ce72ecfef31bb9cd27b734404d2791be1612 SHA1 3a85f7c46898558ee409945fa0395eca9d2e1678 SHA256 23ac39cca24528350809cc3b127ea954ea2549363b446ccaa4ad0b867d57873d
 DIST calculate-server-2.1.4.tar.bz2 155634 RMD160 0550b9e02a7c8d5c2e3aa32df8ece719ee77fbf5 SHA1 1e1624080aaa481a71aa1c84cd37bfe435150b95 SHA256 307cf843318e50c2e460a8f5e09751a33af8671060f81aedcd25d4772075599c
+DIST calculate-server-2.1.5.tar.bz2 151750 RMD160 f34df55deb04d4f324425c3c6b0a6b3ff570e276 SHA1 39ce789cf80d82e0e99d02498ab6bf0b3e25ea28 SHA256 209b9c3a1a46431504c032406aa19eb224390ad1ab3ab2ecb5b1bc9467ce7804
 EBUILD calculate-server-2.1.3-r1.ebuild 4720 RMD160 e1c21c302c01909da0434f659dc8fbe306b0816d SHA1 6b891e5521f7dacce63046819f9ad07a1e03d41b SHA256 1318dea408b88f19c6b09e9bbfa5016e614468d4345e59c25fee5979c680f846
 EBUILD calculate-server-2.1.4-r1.ebuild 4975 RMD160 de6e61d71703146fdf6e678e4cdee7bd2185ed0b SHA1 d320d5bff814ef646962320adcdc0d40ebc719a3 SHA256 6518bff7925b444cca718fbd3293802ec3767280de4af7c61aa2fcb516702831
 EBUILD calculate-server-2.1.4.ebuild 4814 RMD160 79602f808ee3c732b64bdaef60ed0cfcd1edd877 SHA1 00bf30a53f5b3e3186d0fba84f29e76e46f5e48f SHA256 964d9675d71669188dd715d65a10eeb02d57aeee9588dff9ae8b6cd3db13f71b
+EBUILD calculate-server-2.1.5.ebuild 5092 RMD160 e22ee05d92af74961f94a89cd86145c7cdd9dbf3 SHA1 7403cdc983dbb9db9e933236239707e451736146 SHA256 66919689b1f2395807d73c53fb75b00a508687e28d54b7272d1394a0da81a985
 EBUILD calculate-server-9999.ebuild 789 RMD160 90778efbeec6b37aa1e543e9fe3962ceb3e3f920 SHA1 1931a4d1353bee556118b639744c90d3aab88c2a SHA256 44696090308abf56e7037613adf071795896e536698d68ae031c9ecbcef66189
-MISC ChangeLog 249 RMD160 dc9ee0a6b94f9087b7328928681afa173b793232 SHA1 0f72a9e2568f517c0728980b30ca14319da82e47 SHA256 75c0a2ce18c083706d73bc85c748a3d2626b236218aed60fc4afae5b959de8bd
+MISC ChangeLog 393 RMD160 1c75a48ced4628013278269921e4f66efee53c06 SHA1 e99d0366f695d6175c468aee73fc8764a01f93b5 SHA256 53a46575a765c88d449c79653b1ea9aa4ddbf67bf9e1097545d3198f4e615c76
 MISC metadata.xml 286 RMD160 e243725ec1a1302cab0d0efee76a4a926e855916 SHA1 6071aa604ea5a1ba8e1772e8f37a24f26b893d8d SHA256 aab7ddde310df96da76277d5ae340a4b0926bec3b354bfb2fea3288081036d74
