@@ -1,6 +1,10 @@
-# ChangeLog for sys-apps/calculate-client
+# ChangeLog for sys-apps/calculate-server
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
+
+  03 Nov 2009; Mike Hirecky (mhiretskiy) <mh@calculate.ru>
+  +calculate-server-2.1.5.ebuild:
+  Fixed different bugs, added support dovecot 1.2
 
   05 Aug 2009; Aleksandr Yakimov (yaleks) <yaleks@gentoo.ru>
   calculate-server-2.1.3.ebuild, +metadata.xml:
